promo section almost done

--- a/index.html
+++ b/index.html
@@ -5,10 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
+    <link rel="stylesheet" href="css/style.min.css">
     <title>Pulse</title>
 </head>
 <body>
+    <div class="promo">
+        <div class="container">
+            <header class="header">
+                <a href="" class="header__logo">
+                    <img src="img/logo.png" alt="logo">
+                </a>
+                <div class="header__official">
+                    Официальный представитель
+                    <span>Garmin, Polar, Suunto</span>
+                </div>
+                <div class="header__contacts">
+                    <a class="header__phone" href="tel:+74999228974">+7 (499) 922-89-74</a>
+                    <button class="button">заказать звонок</button>
+                </div>
+            </header>
+            <div class="promo__wrapper">
+                <h1 class="promo__header">Подбор пульсометра</h1>
+                <h2 class="promo__subheader">с учётом Вашего уровня подготовки</h2>
 
+                <div class="promo__icons">
+                    <div class="promo__icon"><img src="img/icons/time.png" alt="time">Время подбора: 10 минут</div>
+                    <div class="promo__icon"><img src="img/icons/shippment.png" alt="shippment">Бесплатная доставка</div>
+                    <div class="promo__icon"><img src="img/icons/answer.png" alt="answer">Ответим на все вопросы</div>
+                </div>
+            </div>
+            
+        </div>
+    </div>
     <!-- <span class="icon-facebook-f"></span> -->
     <!-- <span class="icon-instagram"></span> -->
     <!-- <span class="icon-pinterest-p"></span> -->
