--- a/index.html
+++ b/index.html
@@ -34,8 +34,24 @@
                     <div class="promo__icon"><img src="img/icons/shippment.png" alt="shippment">Бесплатная доставка</div>
                     <div class="promo__icon"><img src="img/icons/answer.png" alt="answer">Ответим на все вопросы</div>
                 </div>
+
+                <button class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
+                <div class="promo__link">
+                    или
+                    <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
+                </div>
             </div>
-            
+        </div>
+    </div>
+    <div class="consultation">
+        <div class="container">
+            <h2 class="title title_left">Получите бесплатную консультацию <br> по подбору пульсометра</h2>
+            <div class="consultation__descr">Просто заполните форму заявки <br> и мы перезвоним вам в течении 10 минут</div>
+            <form action="#">
+                <input placeholder="Ваше имя" required type="text">
+                <input placeholder="Ваш телефон" required type="number">
+                <input placeholder="Ваш E-mail" type="email">
+            </form>
         </div>
     </div>
     <!-- <span class="icon-facebook-f"></span> -->
