--- a/index.html
+++ b/index.html
@@ -43,14 +43,38 @@
             </div>
         </div>
     </div>
+    <div class="advantages">
+        <div class="container">
+            <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
+            <div class="advantages__wrapper">
+                <div class="advantages__item">
+                    <div class="advantages__icon"><img src="img/icons/cup.png" alt="cup"></div>
+                    <h3 class="advantages__label">Делимся опытом</h3>
+                    <div class="advantages__descr">Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
+                </div>
+                <div class="advantages__item">
+                    <div class="advantages__icon"><img src="img/icons/heart.png" alt="heart"></div>
+                    <h3 class="advantages__label">Заботимся о здоровье</h3>
+                    <div class="advantages__descr">Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</div>
+                </div>
+                <div class="advantages__item">
+                    <div class="advantages__icon"><img src="img/icons/shoe.png" alt="shoe"></div>
+                    <h3 class="advantages__label">Учим бегать</h3>
+                    <div class="advantages__descr">Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - <a href="#" class="advantages__link">I LOVE RUNNING.</a></div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="consultation">
         <div class="container">
             <h2 class="title title_left">Получите бесплатную консультацию <br> по подбору пульсометра</h2>
             <div class="consultation__descr">Просто заполните форму заявки <br> и мы перезвоним вам в течении 10 минут</div>
-            <form action="#">
-                <input placeholder="Ваше имя" required type="text">
-                <input placeholder="Ваш телефон" required type="number">
-                <input placeholder="Ваш E-mail" type="email">
+            <form class="feed-form" action="#">
+                <input name="name" placeholder="Ваше имя" required type="text">
+                <input name="phone" placeholder="Ваш телефон" required type="tel">
+                <input name="email" placeholder="Ваш E-mail" required type="email">
+
+                <button class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
             </form>
         </div>
     </div>
