--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
         <div class="modal__close">&times;</div>
         <div class="modal__subtitle">Просто заполните форму заявки</div>
         <div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
-        <form class="feed-form feed-form_mt25" action="./mailer/smart.php">
+        <form class="feed-form feed-form_mt25" action="./mailer/smart.php" method="post">
           <input name="name" placeholder="Ваше имя" type="text" />
           <input name="phone" placeholder="Ваш телефон" />
           <input name="email" placeholder="Ваш E-mail" type="email" />
