link tine-slider.css as rel stylesheet

--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Індивідуальний підбір пульсометрів в Україні" />
     <link
-      rel="preload"
+      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css"
-      as="style"
-      onload="this.onload=null;this.rel='stylesheet'"
     />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="icon" type="image/x-icon" href="./favicon.png" />
@@ -752,11 +750,11 @@
     <a href="#up" class="pageup"><img src="./img/icons/chevron-up-solid.svg" alt="up" /></a>
 
     <script src="./js/modernizr.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="./js/script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <script src="./js/wow.min.js"></script>
     <script src="./js/jquery.validate.min.js"></script>
     <script src="./js/jquery.maskedinput.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
